# conductarr

./: .dockerignore  .gitignore  .releaserc.json  Dockerfile  LICENSE.md  README.md  config.example.yml  docker-compose.dev.yml  docker-compose.prod-test.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: publish.yml  quality.yml  release.yml
conductarr/: __init__.py  __main__.py  config.py  const.py  engine.py  events.py  log.py  monitor.py  orchestrator.py
conductarr/clients/: radarr.py  release.py  sabnzbd.py  sonarr.py
conductarr/db/: __init__.py  database.py  repository.py
conductarr/db/migrations/: 001_initial.sql  002_upgrade_grabbed_at.sql
conductarr/queue/: __init__.py  manager.py  matchers.py  models.py
conductarr/upgrade/: __init__.py  scheduler.py
scripts/: example_flow.py  get_api_key.py  reset_sabnzbd.ps1  run_example_flow.ps1
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/clients/: test_sabnzbd.py
tests/integration/queue/: test_blocklist.py  test_queue_assignment.py  test_reconcile.py  test_reorder.py  test_sabnzbd_resilience.py  test_score_filter.py
tests/mocks/: control_client.py  main.py
tests/mocks/radarr/: app.py  state.py
tests/mocks/sabnzbd/: app.py  state.py
tests/mocks/sonarr/: app.py  state.py
tests/unit/clients/: test_radarr.py  test_sabnzbd.py  test_sonarr.py
tests/unit/queue/: test_manager.py  test_matchers.py
tests/unit/upgrade/: __init__.py  test_release_helpers.py  test_scheduler.py
