[project]
name = "conductarr"
authors = [{ name = "Lennard Beers", email = "l.beers@outlook.de" }]
maintainers = [{ name = "Lennard Beers", email = "l.beers@outlook.de" }]
license = { file = "LICENSE.md" }
description = "🎼 Priority-based download queue orchestrator for Radarr, Sonarr & SABnzbd — automatically manages and reorders your download queue across multiple priority tiers."
readme = "README.md"
requires-python = ">=3.14"
version = "0.0.0-dev"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.21.0",
    "pydantic>=2.12.5",
    "pyarr>=5.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
    "tzdata>=2025.2",
]

[project.scripts]
conductarr = "conductarr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.6",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.mypy]
# These files run inside Docker containers and import packages (fastapi, uvicorn)
# that are not installed in the host virtual environment.
exclude = [
    "tests/mocks/main\\.py",
    "tests/mocks/sabnzbd/app\\.py",
    "tests/mocks/radarr/app\\.py",
    "tests/mocks/sonarr/app\\.py",
]
